-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.10.0 FF
-
None
-
Debian testing, Plasma Wayland session, qtbase self-compiled from git dev as of commit 44b5602536a95b847404b28948ad2bb4a4076f4b
-
-
da3422ca1 (dev), 854d7021b (dev), bb2121551 (dev), 245f4d1d8 (dev), 69b6cf44a (6.10)
Currently, Qt doesn't support the "Locale" property of the AT-SPI Accessible interface:
This was originally reported in the KDE a11y matrix channel and can e.g. be seen in the sample output of the following app that prints information about an accessible application on Linux:
https://github.com/luukvanderduim/a11y-app
From that app's README (as of git main as of commit bc89ba2b0a1bb44e0aabe649ed834c900180083e):
luuk@n ~> a11y-app kate Using bus name: :1.217 Properties of the root accessible object: +----------------+-------------------------------------------------------------------------------------------------------------------------------------------------+ | Name: | kate | | Description: | /usr/bin/kate | | Locale: | Error: org.freedesktop.DBus.Error.UnknownInterface: Interface org.a11y.atspi.Accessible was not found in object /org/a11y/atspi/accessible/root | | Accessible ID: | org.kde.kate | | Child count: | 1 | | Parent: | ObjectRef { name: OwnedUniqueName(":1.217"), path: OwnedObjectPath(ObjectPath("/org/a11y/atspi/null")) } | | Help text: | --- No value --- | +----------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
Problematic part:
| Locale: | Error: org.freedesktop.DBus.Error.UnknownInterface: Interface org.a11y.atspi.Accessible was not found in object /org/a11y/atspi/accessible/root |
Another way to reproduce:
1) start qtbase spinboxes example (./examples/widgets/widgets/spinboxes/spinboxes)
2) start Accerciser
3) select the top-level "spinboxes" application object in Accerciser
4) query the locale using Accerciser's IPython console:
In [7]: acc.get_object_locale() In [8]: acc.get_object_locale() == None Out[8]: True