src/gui/accessible/qaccessible.cpp
@@ -450,6 +450,12 @@ Q_STATIC_LOGGING_CATEGORY(lcAccessibilityCore, "qt.accessibility.core");
                                 Defines the hierarchical level of an element within a structure,
                                 e.g. the heading level of a heading. This attribute conceptually
                                 matches the "aria-level" property in ARIA.
+    \value [since 6.10] Locale  value type: \a QLocale
+                                Locale of the element.
+                                This can be used to specify that an element has a locale that
+                                differs from the application's default locale, e.g. for documents
+                                or paragraphs within a document that use a language that differs
+                                from the application's user interface language.
 
     \sa QAccessibleAttributesInterface
 */
